--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,75 @@
 .App {
-  text-align: center;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	text-align: center;
+	background-color: rgb(88, 100, 107);
+	height: 100vh;
+	color: white;
+	margin: 0;
+	padding: 0;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+#title{
+	margin: 0;
+	padding: 15px 0 15px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#container{
+	margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+/* Calculator */
+.calculator{
+	width: 260px;
+	height: 300px;
+	background-color: rgb(220, 220, 220);
+	margin: 0 auto;
+	color: black;
+	border-radius: 0 0 5px 5px;
+	
+	display: inline-grid;
+	display: -moz-inline-grid;
+	display: -ms-inline-grid;
+}
+.calculator{
+	grid-template-columns: 65px 65px 65px 65px;
+	grid-template-rows: 60px 60px 60px 60px 60px;
+}
+.calculator{
+	/* grid-template-areas */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.calculator div{
+	cursor: pointer;
 }
+
+.calc-button:hover{
+	background-color: rgb(200, 200, 200);
+}
+.calc-button:nth-child(4),.calc-button:nth-child(8), .calc-button:nth-child(12), .calc-button:nth-child(16), .calc-button:nth-child(19){
+	background-color: rgb(238, 135, 1);
+	color: white;
+} 
+
+.calc-button-value{
+	pointer-events: none;	
+}
+.result{
+	position: relative;
+	width: 260px;
+	height: 100px;
+	background-color: rgb(61, 61, 61);
+	color: white;
+	margin: 0 auto;
+	border-radius: 5px 5px 0 0;
+}
+
+.result p{
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    bottom: 20px;
+	right: 20px;
+	font-size: 3em;
+}
+
+/* Button Colors */
