--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
 }
 
 .calc-button{
-	border: solid grey 1px;
+	border: solid rgb(148, 148, 148) 1px;
 }
 
 .calc-button:hover{
@@ -74,6 +74,7 @@
     bottom: 20px;
 	right: 20px;
 	font-size: 3em;
+	font-weight: 200;
 }
 
 /* Button GRID */
